ajout de bootstrap pour un peu de beauté

--- a/templates/yaml/index.html.twig
+++ b/templates/yaml/index.html.twig
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Organisations</title>
-
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
-    <a href="{{ path('addOrganization')}}">Ajouter une nouvelle organisation</a>
-    <table>
+    <a href="{{ path('addOrganization')}}" class="btn btn-primary">Ajouter une nouvelle organisation</a>
+    <table class="table">
         <thead>
             <tr>
                 <th>Organisation</th>
